[project]
name = "elile-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "chainlit>=2.8.2",
    "google-auth>=2.41.1",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=3.4.0",
    "google-generativeai>=0.8.5",
    "google-search-results>=2.4.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.77",
    "lxml>=6.0.2",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.1.2",
]
